--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -48,7 +48,7 @@
         <div class="inner-admin-panel border" id="js-tab">
             <h6>Add new user</h6>
             <div>
-                <form method="get" action="/admin/add" th:object="${newUser}" id="js_new_user_form">
+                    <form th:method="POST" th:action="@{/admin/add}" th:object="${newUser}" id="js_new_user_form">
                     <div class="form-group">
                         <label for="login">Name</label>
                         <input type="text" class="form-control" name="login" th:field="*{name}" id="login">
