--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -13,7 +13,7 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <p class="navbar-brand">
-            <b><span th:text="${user.getUsername()}"></span></b>
+            <span th:text="${user.getUsername()}"></span>
             <span> with roles: </span>
             <th:block th:each="role:${user.getAuthorities()}">
                 <span th:text="${role.toString()}"></span>
