--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -20,7 +20,7 @@
             </div>
             <div id="editFormContainer">
                 <div>
-                    <form id="editForm" action="/admin/update" method="get" th:object="${userUpdate}">
+                    <form id="editForm" th:action="@{/admin/{id}(id=${userUpdate.getId()})}" th:method="patch" th:object="${userUpdate}">
                         <input type="hidden" name="id" th:field="*{id}">
                         <div class="modal-body">
                             <div class="form-group">
